--- a/HomeworkManagement.html
+++ b/HomeworkManagement.html
@@ -74,7 +74,7 @@
                     <th scope="row">1</th>
                     <td>HomeWork 1</td>
                     <td>2017/10/30</td>
-                    <td><a class="btn btn-info" href="">審核</a></td>
+                    <td><a class="btn btn-info" href="homework_audit.html">審核</a></td>
                     <td><a class="btn btn-info" href="">檢視</a></td>
                     <td><a class="btn btn-info" href="">編輯</a></td>
                     </tr>
@@ -96,7 +96,7 @@
                     </tr>
                 </tbody>
                 </table>
-                <a class="btn btn-success btn-block" href="">新增課程</a>
+                <a class="btn btn-success btn-block" href="homework_new.html">新增作業</a>
             </div>
         </div>
       </div>
