--- a/AccountManagement.html
+++ b/AccountManagement.html
@@ -30,6 +30,12 @@
             <li class="nav-item active">
               <a class="nav-link" href="AccountManagement.html">帳號管理 <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="CourseManagement.html">課程管理</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="StudentManagement.html">學生管理</a>
+            </li>
           </ul>
           <span class="navbar-text">管理員</span>
           <button type="button" class="btn btn-light">登出</button>
