--- a/HomeworkManagement.html
+++ b/HomeworkManagement.html
@@ -27,14 +27,8 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="CourseManagement.html">課程管理</a>
-            </li>
             <li class="nav-item active">
               <a class="nav-link" href="HomeworkManagement.html">作業管理 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="StudentManagement.html">學生管理</a>
             </li>
           </ul>
           <span class="navbar-text">教師</span>
@@ -64,6 +58,7 @@
                     <th scope="col">#</th>
                     <th scope="col">作業名稱</th>
                     <th scope="col">繳交期限</th>
+                    <th scope="col">開放遲交</th>
                     <th scope="col">審核作業</th>
                     <th scope="col">成績報告</th>
                     <th scope="col">操作</th>
@@ -74,6 +69,7 @@
                     <th scope="row">1</th>
                     <td>HomeWork 1</td>
                     <td>2017/10/30</td>
+                    <td class="text-success">開放</td>
                     <td><a class="btn btn-info" href="homework_audit.html">審核</a></td>
                     <td><a class="btn btn-info" href="homework_report.html">檢視</a></td>
                     <td><a class="btn btn-info" href="">編輯</a></td>
@@ -82,6 +78,7 @@
                     <th scope="row">2</th>
                     <td>HomeWork 2</td>
                     <td>2017/11/16</td>
+                    <td class="text-success">開放</td>
                     <td><a class="btn btn-info" href="">審核</a></td>
                     <td><a class="btn btn-info" href="">檢視</a></td>
                     <td><a class="btn btn-info" href="">編輯</a></td>
@@ -90,6 +87,7 @@
                     <th scope="row">3</th>
                     <td>HomeWork 3</td>
                     <td>2017/12/8</td>
+                    <td class="text-danger">關閉</td>
                     <td><a class="btn btn-info" href="">審核</a></td>
                     <td><a class="btn btn-info" href="">檢視</a></td>
                     <td><a class="btn btn-info" href="">編輯</a></td>
