--- a/homework_audit.html
+++ b/homework_audit.html
@@ -14,8 +14,8 @@
       }
       .div_body{
           padding: 10px 0;
-          max-width: 800px;
-          margin: 0 auto;
+          /* max-width: 1000px;
+          margin: 0 auto; */
       }
       .div_foot{
         text-align: center;
@@ -32,14 +32,8 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="CourseManagement.html">課程管理</a>
-            </li>
             <li class="nav-item active">
               <a class="nav-link" href="HomeworkManagement.html">作業管理 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="StudentManagement.html">學生管理</a>
             </li>
           </ul>
           <span class="navbar-text">教師</span>
@@ -57,8 +51,10 @@
                 <th scope="col">#</th>
                 <th scope="col">學生姓名</th>
                 <th scope="col">繳交時間</th>
+                <th scope="col">繳交狀態</th>
                 <th scope="col">作業檔案</th>
                 <th scope="col">分數</th>
+                <th scope="col">評語</th>
                 </tr>
             </thead>
             <tbody>
@@ -66,36 +62,46 @@
                     <th scope="row">1</th>
                     <td>學生 1</td>
                     <td>2017/10/19 16:20:00</td>
+                    <td class="text-warning">遲交</td>
                     <td><a class="btn btn-info" href="">下載</a></td>
                     <td><input type="number" class="form-control" value="68"></td>
+                    <td><input type="text" class="form-control" value=""></td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>學生 2</td>
                     <td>2017/10/19 16:20:00</td>
+                    <td class="text-success">已上傳</td>
                     <td><a class="btn btn-info" href="">下載</a></td>
                     <td><input type="number" class="form-control" value="85"></td>
+                    <td><input type="text" class="form-control" value=""></td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>學生 3</td>
                     <td>2017/10/19 16:20:00</td>
+                    <td class="text-success">已上傳</td>
                     <td><a class="btn btn-info" href="">下載</a></td>
                     <td><input type="number" class="form-control" value="76"></td>
+                    <td><input type="text" class="form-control" value="部分不符合題目需求"></td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
                     <td>學生 4</td>
                     <td></td>
+                    <td class="text-danger">未上傳</td>
                     <td></td>
                     <td><input type="number" class="form-control" value="0"></td>
+                    <td><input type="text" class="form-control" value=""></td>
                 </tr>
                 <tr>
                     <th scope="row">5</th>
                     <td>學生 5</td>
                     <td>2017/10/19 16:20:00</td>
+                    <td class="text-success">已上傳</td>
                     <td><a class="btn btn-info" href="">下載</a></td>
                     <td><input type="number" class="form-control" value="90"></td>
+                    <td><input type="text" class="form-control" value=""></td>
                 </tr>
             </tbody>
         </table>
