--- a/homework_new.html
+++ b/homework_new.html
@@ -29,14 +29,8 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="CourseManagement.html">課程管理</a>
-            </li>
             <li class="nav-item active">
               <a class="nav-link" href="HomeworkManagement.html">作業管理 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="StudentManagement.html">學生管理</a>
             </li>
           </ul>
           <span class="navbar-text">教師</span>
@@ -64,11 +58,24 @@
                             <input type="date" class="form-control" id="">
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <fieldset class="form-group">
+                      <div class="row">
+                        <legend class="col-form-legend col-sm-2">開放遲交</legend>
                         <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary">確認新增</button>
+                          <div class="form-check">
+                            <label class="form-check-label">
+                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked> 開放
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <label class="form-check-label">
+                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2"> 關閉
+                            </label>
+                          </div>
                         </div>
-                    </div>
+                      </div>
+                    </fieldset>
+                    <button type="submit" class="btn btn-primary">確認新增</button>
                     </form>
                 </div>
             </div>
