--- a/AccountManagement.html
+++ b/AccountManagement.html
@@ -8,14 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <style>
-      .navbar .navbar-text{
-        margin-right: 10px;
-      }
-      .div_body{
-          padding: 10px 0;
-      }
-    </style>
+    <link rel="stylesheet" href="main_style.css">
   </head>
   <body>
     <header>
@@ -41,6 +34,9 @@
           <button type="button" class="btn btn-light">登出</button>
         </div>
       </nav>
+      <div class="div_headImg">
+        <img src="img/bg2.jpg" alt="image">
+      </div>
     </header>
     <div class="container-fluid">
       <div class="div_body">
