--- a/SubmitHomework.html
+++ b/SubmitHomework.html
@@ -56,6 +56,7 @@
                     <th scope="col">繳交期限</th>
                     <th scope="col">繳交狀態</th>
                     <th scope="col">操作</th>
+                    <th scope="col">分數</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -63,15 +64,17 @@
                     <th scope="row">1</th>
                     <td>HomeWork 1</td>
                     <td>2017/10/30</td>
-                    <td>已上傳</td>
+                    <td class="text-warning">遲交</td>
                     <td><input type="file" class="form-control-file"></td>
+                    <td>68</td>
                     </tr>
                     <tr>
                     <th scope="row">2</th>
                     <td>HomeWork 2</td>
                     <td>2017/11/16</td>
-                    <td>未上傳任何檔案</td>
-                    <td><input type="file" class="form-control-file"></td>
+                    <td class="text-success">已上傳</td>
+                    <td><input type="file" class="form-control-file" disabled></td>
+                    <td>85</td>
                     </tr>
                     <tr>
                     <th scope="row">3</th>
