--- a/AccountManagement.html
+++ b/AccountManagement.html
@@ -130,7 +130,7 @@
             </tr>
           </tbody>
         </table>
-        <a class="btn btn-success btn-block" href="">新增使用者</a>
+        <a class="btn btn-success btn-block" href="account_new.html">新增使用者</a>
       </div>
     </div>
     
