--- a/SubmitHomework.html
+++ b/SubmitHomework.html
@@ -65,7 +65,7 @@
                     <td>HomeWork 1</td>
                     <td>2017/10/30</td>
                     <td class="text-warning">遲交</td>
-                    <td><input type="file" class="form-control-file"></td>
+                    <td><a class="btn btn-info" href="homework_submit.html">上傳作業</a></td>
                     <td>68</td>
                     </tr>
                     <tr>
@@ -73,15 +73,16 @@
                     <td>HomeWork 2</td>
                     <td>2017/11/16</td>
                     <td class="text-success">已上傳</td>
-                    <td><input type="file" class="form-control-file" disabled></td>
+                    <td><a class="btn btn-info disabled" href="">上傳作業</a></td>
                     <td>85</td>
                     </tr>
                     <tr>
                     <th scope="row">3</th>
                     <td>HomeWork 3</td>
                     <td>2017/12/8</td>
-                    <td>未上傳任何檔案</td>
-                    <td><input type="file" class="form-control-file"></td>
+                    <td class="text-danger">未上傳</td>
+                    <td><a class="btn btn-info" href="">上傳作業</a></td>
+                    <td></td>
                     </tr>
                 </tbody>
                 </table>
