--- a/homework_submit.html
+++ b/homework_submit.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="HomeworkManagement.html">作業管理 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="SubmitHomework.html">作業繳交 <span class="sr-only">(current)</span></a>
             </li>
           </ul>
           <span class="navbar-text">教師</span>
@@ -44,53 +44,50 @@
     </header>
     <div class="container-fluid">
       <div class="div_body">
-            <div class="card">
-                <div class="card-header">
-                    新增作業
-                </div>
-                <div class="card-body">
-                    <form>
-                    <div class="form-group row">
-                        <label for="" class="col-sm-2 col-form-label">作業名稱</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="" placeholder="請輸入作業名稱">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="" class="col-sm-2 col-form-label">作業說明</label>
-                        <div class="col-sm-10">
-                            <textarea class="form-control" id="" rows="3" placeholder="請輸入作業說明"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="" class="col-sm-2 col-form-label">繳交期限</label>
-                        <div class="col-sm-10">
-                            <input type="date" class="form-control" id="">
-                        </div>
-                    </div>
-                    <fieldset class="form-group">
-                      <div class="row">
-                        <legend class="col-form-legend col-sm-2">開放遲交</legend>
-                        <div class="col-sm-10">
-                          <div class="form-check">
-                            <label class="form-check-label">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked> 開放
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <label class="form-check-label">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2"> 關閉
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                    </fieldset>
-                    <div class="div_foot">
-                        <button type="submit" class="btn btn-primary">確認新增</button>
-                    </div>
-                    </form>
-                </div>
+        <table class="table table-bordered">
+            <tbody>
+                <tr>
+                    <th scope="row">作業名稱</th>
+                    <td>HomeWork 1</td>
+                </tr>
+                <tr>
+                    <th scope="row">作業說明</th>
+                    <td>請上傳PDF檔，並將檔名以學號命名。</td>
+                </tr>
+                <tr>
+                    <th scope="row">繳交期限</th>
+                    <td>2017/10/30</td>
+                </tr>
+                <tr>
+                    <th scope="row">開放遲交</th>
+                    <td>開放</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="card">
+            <div class="card-header">
+                上傳作業
             </div>
+            <div class="card-body">
+                <form>
+                <div class="form-group row">
+                    <label for="" class="col-sm-2 col-form-label">作業檔案</label>
+                    <div class="col-sm-10">
+                        <input type="file" class="form-control-file" id="">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="" class="col-sm-2 col-form-label">補充說明</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" id="" rows="3" placeholder="請輸入補充說明"></textarea>
+                    </div>
+                </div>
+                <div class="div_foot">
+                    <button type="submit" class="btn btn-primary">確認上傳</button>
+                </div>
+                </form>
+            </div>
+        </div>
       </div>
     </div>
     
