--- a/AccountManagement.html
+++ b/AccountManagement.html
@@ -9,6 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="main_style.css">
+    <style>
+      .div_body{
+          max-width: 800px;
+          margin: 0 auto;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -130,7 +136,14 @@
             </tr>
           </tbody>
         </table>
-        <a class="btn btn-success btn-block" href="account_new.html">新增使用者</a>
+        <div class="row">
+          <div class="col">
+            <button type="button" class="btn btn-success btn-block">匯入帳號</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-danger btn-block">清除帳號</button>
+          </div>
+        </div>
       </div>
     </div>
     
