--- a/StudentManagement.html
+++ b/StudentManagement.html
@@ -100,14 +100,14 @@
                     </tr>
                 </tbody>
                 </table>
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col">
                     <button type="button" class="btn btn-success btn-block">匯入學生</button>
                   </div>
                   <div class="col">
                     <button type="button" class="btn btn-danger btn-block">清除學生</button>
                   </div>
-                </div>
+                </div> -->
             </div>
         </div>
       </div>
