--- a/AccountManagement.html
+++ b/AccountManagement.html
@@ -53,7 +53,7 @@
               <th scope="col">姓名</th>
               <th scope="col">權限</th>
               <th scope="col">E-Mail</th>
-              <th scope="col">操作</th>
+              <th scope="col">帳號</th>
             </tr>
           </thead>
           <tbody>
@@ -62,77 +62,56 @@
               <td>管理員 1</td>
               <td>管理員</td>
               <td>admin1@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>admin_ntut</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>教師 1</td>
               <td>教師</td>
               <td>teacher1@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>teacher1</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>教師 2</td>
               <td>教師</td>
               <td>teacher2@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-              <td>助教 1</td>
-              <td>助教</td>
-              <td>ta1@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-              <td>助教 2</td>
-              <td>助教</td>
-              <td>ta2@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-              <td>助教 3</td>
-              <td>助教</td>
-              <td>ta3@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>teacher2</td>
             </tr>
             <tr>
               <th scope="row">7</th>
               <td>學生 1</td>
               <td>學生</td>
               <td>t106598001@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>106598001</td>
             </tr>
             <tr>
               <th scope="row">8</th>
               <td>學生 2</td>
               <td>學生</td>
               <td>t106598002@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>106598002</td>
             </tr>
             <tr>
               <th scope="row">9</th>
               <td>學生 3</td>
               <td>學生</td>
               <td>t106598003@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>106598003</td>
             </tr>
             <tr>
               <th scope="row">10</th>
               <td>學生 4</td>
               <td>學生</td>
               <td>t106598004@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>106598004</td>
             </tr>
             <tr>
               <th scope="row">11</th>
               <td>學生 5</td>
               <td>學生</td>
               <td>t106598005@ntut.edu.tw</td>
-              <td><a class="btn btn-info" href="">編輯</a></td>
+              <td>106598005</td>
             </tr>
           </tbody>
         </table>
