--- a/front/homework_submit.html
+++ b/front/homework_submit.html
@@ -69,7 +69,7 @@
                 上傳作業
             </div>
             <div class="card-body">
-                <form>
+                <form id="uploadForm" enctype="multipart/form-data">
                 <div class="form-group row">
                     <label for="" class="col-sm-2 col-form-label">作業檔案</label>
                     <div class="col-sm-10">
@@ -97,5 +97,16 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script>
+    $.ajax({
+        url: 'http://140.124.183.30:8080/SE_pj/api/register',
+        type: 'POST',
+        cache: false,
+        data: new FormData($('#uploadForm')[0]),
+        processData: false,
+        contentType: false
+    }).done(function(res) {
+    }).fail(function(res) {});
+    </script>
   </body>
 </html>
