--- a/front/test.html
+++ b/front/test.html
@@ -10,55 +10,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="main_style.css">
     <style>
-    body{
-        background-image: url(img/bg1.jpeg);
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: top;
-        /*background-position: center;*/
-        background-size: cover;
-    }
     .div_body{
         max-width: 500px;
         margin: 10% auto 10px auto;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
-    }
-    .div_body h1{
-      text-align: center;
-      margin: 10px 0 10px 0;
-      font-family: serif;
-    }
-    .div_btn{
-      text-align: center;
     }
     </style>
   </head>
   <body>
     <div class="container-fluid">
       <div class="div_body">
-        <h1>Programming Assignment Submission System</h1>
-        <form>
-          <div class="form-group">
-            <label for="acc">帳號</label>
-            <input type="text" class="form-control" id="acc" aria-describedby="accHelp" placeholder="請輸入帳號">
-            <small id="accHelp" class="form-text text-muted">學生為學號、教師為教職員號碼</small>
-          </div>
-          <div class="form-group">
-            <label for="pwd">密碼</label>
-            <input type="password" class="form-control" id="pwd" placeholder="請輸入密碼">
-          </div>
-          <!-- <div class="form-check">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input">
-              Check me out
-            </label>
-          </div> -->
-          <div class="div_btn">
-              <button type="button" class="btn btn-primary">登入</button>
-          </div>
-        </form>
+        <div class="list-group">
+            <a href="AccountManagement.html" target="_blank" class="list-group-item list-group-item-action">管理員</a>
+            <a href="HomeworkManagement.html" target="_blank" class="list-group-item list-group-item-action">教師、助教</a>
+            <a href="SubmitHomework.html" target="_blank" class="list-group-item list-group-item-action">學生</a>
+        </div>
       </div>
     </div>
     
